kubernetes/prod/vikunja/vikunja/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/name: vikunja
  name: vikunja
  namespace: vikunja
spec:
  ingressClassName: traefik
  rules:
  - host: tasks.nmoura.pt
    http:
      paths:
      - backend:
          service:
            name: vikunja
            port:
              number: 3456
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
